# kalman_detector

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: codecov.yml
.github/workflows/: ci.yml  release.yml
examples/: frb171003.h5  frb171004.h5  frb_kalman.py
kalman_detector/: __init__.py  core.py  efficiency.py  main.py  svm.py  utils.py
tests/: conftest.py  test_kalman.py  test_kalman2D.py  test_kalman_binary.py  test_main.py  test_svm.py  test_utils.py
